# QtAuthNet

./: CMakeLists.txt  LICENSE  QtAuthNet.pro  README.md
.github/workflows/: windows-build.yml
examples/: example.qml
include/QtAuthNet/: BrowserCasSession.h  CasSessionQml.h  ClientQml.h  HttpResponse.h  qtauthnet_client.h  qtauthnet_global.h  qtauthnet_session.h
src/: BrowserCasSession.cpp  CasSessionQml.cpp  ClientQml.cpp  HttpResponse.cpp  qtauthnet.cpp  qtauthnet.h  qtauthnet_client.cpp  qtauthnet_client.h  qtauthnet_global.h  qtauthnet_session.cpp  qtauthnet_session.h
src/plugin/: QtAuthNetPlugin.cpp  qmldir  qmldir.in
tests/: tst_http.cpp
